objects/amc__Rate_Adjustment__c.object
<CustomObject>
    <description>Identifies the Unique Reference for this Rate Adjustment</description>
    <fields>
        <fullName>amc__Billable_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifies the Billable Hourly Rate used for this Rate Adjustment</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifies the Cost Hourly Rate used for this Rate Adjustment</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <inlineHelpText>Identifies the End Date the Rate Adjustment will no longer apply from</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Project this Rate Adjustment relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Rate Adjustments</relationshipLabel>
        <relationshipName>Rate_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Rate_Card_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Rate Card Entry this Rate Adjustment relates to</inlineHelpText>
        <label>Rate Card Entry</label>
        <referenceTo>amc__Rate_Card_Entry__c</referenceTo>
        <relationshipLabel>Rate Adjustments</relationshipLabel>
        <relationshipName>Rate_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Rate_Type__c</fullName>
        <inlineHelpText>Identifies the type of Billing &amp; Cost Rate method this Rate Adjustment will be applied to</inlineHelpText>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Role-based</fullName>
                </value>
                <value>
                    <fullName>Role-based Override</fullName>
                </value>
                <value>
                    <fullName>Skill-based</fullName>
                </value>
                <value>
                    <fullName>Skill-based Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role this Rate Adjustment relates to</inlineHelpText>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Rate Adjustments</relationshipLabel>
        <relationshipName>Rate_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Skill this Rate Adjustment relates to</inlineHelpText>
        <label>Skill</label>
        <referenceTo>amc__Skill__c</referenceTo>
        <relationshipLabel>Rate Adjustments</relationshipLabel>
        <relationshipName>Rate_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <inlineHelpText>Identifies the Start Date the Rate Adjustment applies from</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Rate Adjustment</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RADJ:{000000}</displayFormat>
        <label>Rate Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Ensure_Correct_Fields_on_Rate_Card</fullName>
        <active>true</active>
        <description>Ensures Rate Card is not Blank if Rate Type = Rate Card</description>
        <errorConditionFormula>AND(
ISPICKVAL(amc__Rate_Type__c, &quot;Rate Card&quot;),
OR(
  ISBLANK(amc__Rate_Card_Entry__c), 
  NOT(ISBLANK(amc__Role__c)), 
  NOT(ISBLANK(amc__Project__c)),
  NOT(ISBLANK(amc__Skill__c))
))</errorConditionFormula>
        <errorMessage>Rate Card Entry must contain a value, Role, Project, and Skill must be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Correct_Fields_on_Role_Override</fullName>
        <active>true</active>
        <description>Ensures Role and Project are not Blank if Rate Type = Role-based Override</description>
        <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Role-based Override&quot;), 
 OR(
  ISBLANK(amc__Project__c), 
  ISBLANK(amc__Role__c), 
  NOT(ISBLANK(amc__Skill__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
))</errorConditionFormula>
        <errorMessage>Project and Role must contain a value, Skill and Rate Card Entry must be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Correct_Fields_on_Role_Rate</fullName>
        <active>true</active>
        <description>Ensures Role is not Blank if Rate Type = Role-based</description>
        <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Role-based&quot;), 
 OR(
  ISBLANK(amc__Role__c), 
  NOT(ISBLANK(amc__Project__c)), 
  NOT(ISBLANK(amc__Skill__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
 )
)</errorConditionFormula>
        <errorMessage>Role must contain a value, Project, Skill and Rate Card Entry must be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Correct_Fields_on_Skill_Override</fullName>
        <active>true</active>
        <description>Ensures Skill, Role and Project are not Blank if Rate Type = Skill-based Override</description>
        <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Skill-based Override&quot;), 
 OR(
  ISBLANK(amc__Project__c), 
  ISBLANK(amc__Skill__c), 
  ISBLANK(amc__Role__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
)</errorConditionFormula>
        <errorMessage>Skill, Project and Role must contain a value, Rate Card Entry must be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Correct_Fields_on_Skill_Rate</fullName>
        <active>true</active>
        <description>Ensures Skill is not Blank if Rate Type = Skill-based</description>
        <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Skill-based&quot;), 
 OR(
  ISBLANK(amc__Skill__c), 
  ISBLANK(amc__Role__c),
  NOT(ISBLANK(amc__Project__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
 )
)</errorConditionFormula>
        <errorMessage>Skill and Role must contain a value, Project and Rate Card Entry must be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Correct_Fields_on_Standard_Rate</fullName>
        <active>true</active>
        <description>Ensures Role and Skill are Blank if Project Rate Type is Standard</description>
        <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Standard&quot;), 
 OR(
  ISBLANK(amc__Project__c), 
  NOT(ISBLANK(amc__Role__c)), 
  NOT(ISBLANK(amc__Skill__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
 )
)</errorConditionFormula>
        <errorMessage>Project must contain a value, Role, Skill and Rate Card Entry must be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Start_Date_Populated</fullName>
        <active>true</active>
        <description>Ensure the Start Date is populated if the End Date contains a value</description>
        <errorConditionFormula>AND(NOT(ISBLANK(amc__End_Date__c)), ISBLANK(amc__Start_Date__c))</errorConditionFormula>
        <errorMessage>You must set a Start Date when specifying an End Date</errorMessage>
    </validationRules>
</CustomObject>